clusterloader2/testing/gatekeeper/allowedrepos-constraint-template.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: $CONSTRAINT_NAME
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - $CONSTRAINT_NAME
